# GenAIChatApplication

./: .editorconfig  .env.example  .gitignore  COMPONENTS_LIST.md  DOCKER_SETUP.md  INTEGRATION_SUMMARY.md  QUICK_START_OLLAMA.md  README.md  TEST_RESULTS.md  VIDEO_FEATURE_SUMMARY.md  docker-compose.ollama-cpu.yml  docker-compose.prod.yml  docker-compose.yml  git_log.txt  git_status.txt  push_without_workflows.sh  test_env_config.sh  test_video_integration.py  test_video_pipeline.sh
backend/: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_migration.sh  test_output.txt  test_text_processing_demo.py
backend/alembic/: QUICKSTART.md  README.md  env.py  verify_schema.sql
backend/alembic/versions/: 001_initial_schema.py  002_add_video_metadata_and_folder_watch.py  003_change_embedding_dimension_to_768.py  20260620_1720_e5faa0c897a2_add_missing_tables.py
backend/app/: celery_app.py  main.py
backend/app/core/: config.py
backend/src/: main.py
backend/src/api/: __init__.py
backend/src/core/: __init__.py  config.py  database.py  logging.py  metrics.py  minio_client.py  redis.py  security.py
backend/src/integrations/: __init__.py  confluence_client.py  jira_client.py  llm_factory.py  ollama_client.py  openai_client.py
backend/src/middleware/: __init__.py  auth.py  logging_middleware.py  sentry_middleware.py
backend/src/models/: __init__.py  audit.py  base.py  chat.py  data_source.py  knowledge.py  types.py  user.py
backend/src/schemas/: __init__.py  admin.py  auth.py  chat.py
backend/src/services/: __init__.py  admin_service.py  audit_service.py  auth_service.py  chat_service.py  folder_watcher.py  ingestion_service.py  metrics_service.py  rag_service.py
backend/src/tasks/: __init__.py  celery.py
backend/src/utils/: __init__.py  crypto.py  text_processing.py  validators.py
backend/src/websockets/: __init__.py  chat_socket.py  ingestion_socket.py
backend/tests/: conftest.py  test_admin_service.py  test_celery_config.py  test_celery_execution.py  test_celery_worker.py  test_crypto.py  test_task_001_repository_structure.py  test_task_004_fastapi_structure.py  test_task_006_migration_setup.py  test_task_007_orm_models.py  test_task_008_database_session.py  test_task_009_redis_cache_layer.py  test_task_010_minio_client.py  test_task_011_auth_service.py  test_task_012_auth_endpoints.py  test_task_013_auth_middleware.py  test_task_014_chat_service.py  test_task_015_openai_client.py  test_task_016_text_processing.py  test_task_017_rag_service.py  test_task_018_chat_query_endpoint.py  test_task_019_websocket_server.py  test_task_021_confluence_client.py  test_task_022_jira_client.py  test_task_023_confluence_ingestion.py  test_task_024_jira_ingestion.py  test_task_025_onboarding_ingestion.py  test_task_028_ingestion_endpoints.py  test_task_029_metrics.py  test_task_030_audit_service.py  test_task_039_prometheus_metrics.py  test_task_042_sentry_integration.py  test_validators.py
(+143 files in other folders)
